--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
   width: 100%;
 }
 
-.sidebar-button {
+#sidebar-button {
   background: none;
   border: none;
   cursor: pointer;
   display: flex;
   position: fixed;
   top: 0;
-  bottom: 0;
+  left: 40px;
   flex-direction: column;
   gap: 5px;
   padding: 10px;
@@ -35,13 +35,8 @@ body {
   transition: 0.3s;
 }
 
-.hidden {
-  display: none;
-}
-
 
 #sidebar {
-  display: none;
   width: 300px;
   background: #333;
   color: white;
@@ -52,6 +47,11 @@ body {
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
+
+.hidden-sidebar {
+  display: none;
+}
+
 
 .hidden {
   display: none !important;
