--- a/style.css
+++ b/style.css
@@ -82,11 +82,6 @@ button {
   background: #fff;
   color: #333;
   border: #333 1px solid;
-  display: flex;  /* Align the content in a row (place name + X) */
-  justify-content: space-between; /* Space out the place title and delete button */
-  align-items: center;  /* Vertically center content */
-  padding: 8px;
-  margin-bottom: 5px;  /* Optional: add some space between each button */
 }
 
 .back-btn {
@@ -309,6 +304,7 @@ button:hover {
   font-weight: 500;
 }
 .place-item {
+  display: flex;  
   cursor: pointer;
   background-color: #fff;
   padding: 8px;
@@ -320,7 +316,7 @@ button:hover {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  margin-right: 10px;  /* Space between title and delete button */
+  margin-right: 30px;  /* Space between title and delete button */
 }
 
 .delete-btn {
