--- a/style.css
+++ b/style.css
@@ -267,6 +267,14 @@ button:hover {
     overflow: scroll;
     scrollbar-width: none; */
 }
+
+@media (max-width: 768px) {
+  #icon-info {
+    max-height: 70vh; /* Full viewport height */
+    overflow-y: auto;  /* Enable vertical scroll */
+  }
+}
+
 #icon-info::-webkit-scrollbar {
   display: none; /* For Chrome, Safari, and Edge */
 }
@@ -342,8 +350,6 @@ button:hover {
   right: 8px;
 }
 
-
-
 .info-description {
   line-height: 1.5;
   max-height: 170px;
@@ -359,6 +365,7 @@ button:hover {
 .info-description::-webkit-scrollbar {
   display: none; /* Chrome/Safari/Webkit */
 }
+
 .close-btn {
   position: absolute;
   top: 3px;
@@ -421,14 +428,6 @@ button:hover {
   margin-right: 30px;  /* Space between title and delete button */
   justify-content: space-between;
 }
-
-@media (max-width: 768px) {
-  .place-item {
-    max-height: 70vh; /* Full viewport height */
-    overflow-y: auto;  /* Enable vertical scroll */
-  }
-}
-
 
 .arrow-icon {
   transform-origin: center center;
