--- a/style.css
+++ b/style.css
@@ -609,6 +609,14 @@ button:hover {
   transition: background 0.3s ease;
 }
 
+.profile-button img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+}
+
 .profile-button:hover {
   background-color: gray;
 }
